proud member added

--- a/views/index.jade
+++ b/views/index.jade
@@ -27,7 +27,8 @@ block body
           p.bold Location
           p We are currently located in Berkeley, California. 
             span.underline Map it.
-        
+      div.grid-third
+        img#ppg(src="PPG.png")
       div.grid-third
         ul
           li: a(href='/') Home
