--- a/public/css/main.css
+++ b/public/css/main.css
@@ -100,10 +100,14 @@ footer ul{
   list-style:none;
   text-align:left;
   font-size:12px;
+  margin-right:40px;
   display:inline-block;
 }
+footer ul:nth-child(3){
+  margin-right:0;
+}
 footer li{
-  padding:10px 0px 20px 40px;
+  line-height:40px;
 }
 footer ul li a{
   color:#333;
@@ -119,17 +123,22 @@ footer p{
   color: #999;
   font-size:11px;
 }
+footer #ppg{
+  padding-top:15px;
+  display:inline-block;
+  width:70%;
+}
 footer .credit{
   color:#ccc;
-  margin-top:35px;
-  margin-bottom:20px;
+  margin-top:53px;
+  margin-bottom:40px;
   display:inline-block;
 }
 #homeCover{
   width:100%;
-  background:url('../dog.jpg');
+  background:url('../homeCover.jpg');
   background-size:cover;
-  background-position:center center;
+  background-position:bottom left;
   background-attachment:fixed;
   display:table;
 }
@@ -137,7 +146,7 @@ footer .credit{
   display:table-cell;
   vertical-align:middle;
   width:100%;
-  color:white;
+  color:#777;
 }
 #customer{
   width:840px;
@@ -216,14 +225,14 @@ footer .credit{
   float:left;
 /*  margin-right:4%;*/
 }
-footer .grid-third{
+/*footer .grid-third{
   width:33.3333333333%;
   display:inline-block;
   float:left;
 }
 footer .grid-third:last-child{
   float:right;
-}
+}*/
 .grid-third{
   width:30%;
   margin-right:5%;
