--- a/public/css/main.css
+++ b/public/css/main.css
@@ -136,7 +136,7 @@ footer .credit{
 }
 #homeCover{
   width:100%;
-  background:url('../homeCover.jpg');
+  background:url('../homeCover.JPG');
   background-size:cover;
   background-position:bottom left;
   background-attachment:fixed;
