--- a/views/index.jade
+++ b/views/index.jade
@@ -3,11 +3,11 @@ extends layout
 block body
   nav
     div#brand
-      a(href='/'): h1 DTDT
+      a(href='/'): h1: i.fa.fa-paw
     div#menu
       ul
         li: a(href='/') Home
-        li: a(href='/services') Serives
+        li: a(href='/services') Services
         li: a(href='/philosophy') Philosophy
         li: a(href='videos') Videos
         li: a(href='/about') About
@@ -18,15 +18,14 @@ block body
 
   footer
       div.grid-third
-        h1 BusinessName
+        h1 Dancing Tails
         aside
           p.bold Contact
           p To acquire more information, please contact Alyssa @ 
             span.underline alyssa.hosbach@gmail.com
         aside
           p.bold Location
-          p We are currently located in Berkeley, California. 
-            span.underline Map it.
+          p We are located in Berkeley, California, and we are currently serving only in the East Bay area.
       div.grid-third
         img#ppg(src="PPG.png")
       div.grid-third
