--- a/views/layout.jade
+++ b/views/layout.jade
@@ -5,7 +5,9 @@ html(ng-app="myApp")
     base(href='/')
     title Dancing Tails Dog Training
     link(rel="icon", type="image/png", href="../favicon.ico")
+    link(rel="stylesheet", href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css")
     link(rel='stylesheet', href='/css/cleanup.css')
+    link(rel='stylesheet', href='/css/icons.css')
     link(rel='stylesheet', href='/css/main.css')
     script(src='https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js')
     script(src='/js/mainscript.js')
