--- a/views/partials/home.jade
+++ b/views/partials/home.jade
@@ -11,7 +11,7 @@ section#customer
 				p.italic "Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book..."
 			div.panel
 				figure.thumbnail
-					img(src="sharpei.jpg")
+					img(src="dog1.jpg")
 				div.customerInfo
 					p.bold.dark Penelope
 					p.italic Shar Pei mix
@@ -20,7 +20,7 @@ section#customer
 				p.italic "Lorem Ipsum is simply dummy text of the printing and typesetting industry."
 			div.panel
 				figure.thumbnail
-					img(src="dog.jpg")
+					img(src="dog2.jpg")
 				div.customerInfo
 					p.bold.dark Pookie
 					p.italic Maltese mix
@@ -29,7 +29,7 @@ section#customer
 				p.italic "Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text .."
 			div.panel
 				figure.thumbnail
-					img(src="sharpei.jpg")
+					img(src="dog3.jpg")
 				div.customerInfo
 					p.bold.dark 
 					p.italic Shar Pei mix
@@ -39,7 +39,7 @@ section#customer
 				p.italic "Lorem Ipsum is simply ."
 			div.panel
 				figure.thumbnail
-					img(src="dog.jpg")
+					img(src="dog4.jpg")
 				div.customerInfo
 					p.bold.dark Hachi
 					p.italic Husky mix
@@ -61,9 +61,10 @@ section#customer
 				div.customerInfo
 					p.bold.dark Mace
 					p.italic Maltese mix
-section#programs
-	div
-		h1 Finding the Right Program
-		p.small Read about our differnt training progams and see which one fits your pup the best
-		button View Programs
+section.pageEnd
+	figure.banner#homeEnd
+		div
+			h1 Finding the Right Program
+			p.small Read about our differnt training progams and see which one fits your pup the best
+			a(href="/services"): button View Programs
 script(src='/js/mainscript.js')
