--- a/views/partials/about.jade
+++ b/views/partials/about.jade
@@ -1,52 +1,43 @@
-section.container
-	header
-		h1.title Alyssa Hosbach
-		p.small Let's learn a little bit more about Alyssa's background and experience. To learn more about her training technique and approach, please visit her 
-			span.underline philosophy
-			|  page.
+section.container#bio
+	div.panelContainer
+		div.panel
+			h1 Let me tell you a little bit about myself...
+		div.portrait
+			div.panel
+				img(src="DancingTails_AboutMe1.jpg",style="max-width:100%")
+			div.panel
+				ul
+					li.smallest Certified in Training and Behavior Consultation from San Francisco's Dog Training Internship Academy
+					li.smallest Proud Member of the Pet Professional Guild
+					li.smallest Master of Art in Social Science, Humboldt State University
+					li.smallest Bachelors of Science in Animal Science, Cal Poly San Luis Obispo
+		div.panel
+			p I'm Alyssa: a Christian, wife, and (cue the fireworks!) dog trainer, in that order.
+			p But before I fill you in on my journey to this point in my life, I’d like to spend a few lines explaining how I can help you.
+			p Like you, I am a dog lover. But for as much love as we have for our furry canine companions, sometimes their behavior is agitating & confusing. Whether it’s barking at other dogs, potty training issues, or pulling on leash, unwanted behaviors can make our lives (and our dogs’ lives) difficult. And that’s where I come in.
+			p As a certified Training and Behavior Consultant, I am here to help you and your dog with problem behaviors. Also, for new dog owners and puppy parents, I can help teach basic obedience to set your pooch up for success in the future. My <link>training philosophy<link> is to teach your dog using positive reinforcement techniques only, while also giving you the tools to understand what led to your dog’s problem behavior in the first place and how you can prevent that behavior going forward.  My goal is to set you up for lasting success, so you and your companion can forge joyfully ahead!
+		div.panel
+			p I invite you to learn more about my motivation for becoming a dog training...
+			button(ng-click="ReadMore=!ReadMore")
+				span(ng-hide="ReadMore") Learn More...
+					span.glyphicon.glyphicon-chevron-down
+				span(ng-show="ReadMore") Less...
+					span.glyphicon.glyphicon-chevron-up
+		div(ng-show="ReadMore").panel
+			p Animals have always been a passion of mine. As a child, my parents simply couldn’t keep me away from animals. Growing up I had birds, fish, a snake, pet rats, and hermit crabs...all in our cozy little apartment! We weren’t able to have a pet dog in the apartment, so I spent plenty of time playing with and caring for my older siblings’ dogs: a husky named Zeus, an Alaskan Malamute named Mara, and chihuahuas named Tillie and Suzie. I think it’s safe to say that my passion for animals has continued to this day...
+			p The summer before I left home for college I worked as a veterinary technician, which was a great experience, but I left knowing that veterinary work was not right for me. Then, I headed off to Cal Poly, San Luis Obispo in pursuit of an Animal Science degree. As it turns out, this degree had little to do with dogs and other household pets; but, I learned all about the anatomy, physiology, and production of livestock animals such as chickens, cows, pigs, and sheep. In order to get my dog fix, I volunteered as an advanced canine handler at Woods Humane in San Luis Obispo, where I worked on basic training techniques and spent quality time with homeless dogs in need of some love. After my second year at Cal Poly I even had the opportunity to spend a summer in Bermuda training dolphins for Dolphin Quest, which (as you can imagine) was a pretty incredible experience! But after I graduated from Cal Poly, I once again found myself knowing more about what I did not want to do, as opposed to what I did want to do: Working with livestock and training dolphins just didn’t fit the bill.
+			p It was during my time at Cal Poly that I came to know Jesus Christ as my Lord and Savior, and met my now-husband, Rob. We got married soon after his graduation and moved up to Arcata, California to pursue master’s degrees at Humboldt State University. My degree program was called Environment and Community, and it was an interdisciplinary program focused on the intersection between people, economics, and the environment. While I was fascinated by these interactions, what I learned most from my time in graduate school was that I enjoyed coaching students and teaching workshops during my job as an Academic Advisor. Once I graduated, I knew I wanted to teach people and have animals be a part of my future career. Then, I found the Dog Training Internship Academy (DTIA) based in San Francisco (SF), which originally started as a class at the SFSPCA.
+			p I discovered that dog training was the marriage of two things I loved: coaching people and working with dogs. Through DTIA’s rigorous 6 month program, I studied scientifically-based animal learning theory, mechanics and methods for teaching behaviors to dogs, effective coaching skills, and logged hundreds of hours training dogs.
+			p And that brings us up to the present, where I am now the owner of Dancing Tails Dog Training. I thank you for taking the time to learn more about me, and I hope to meet you soon. If you have questions or are interested in a training consultation, please <link>contact me<link>.
+		div.panel
+			img(src="DancingTails_AboutMe3.jpg")
 
-	img(src="dogPortrait.jpg",style="max-width:100%")
-	div.panelContainer#bio
-		div.panel
-			h2 A little bit about me 
-			p.small (TL;DR? Read the bolded words)
-		div.panel
-			p
-				| I 
-				span.bold grew up surrounded by animals 
-				| of all shapes and sizes. My family always had dogs around, ranging from Husky’s to pugs, and I loved caring for them. I 
-				span.bold worked as a veterinary technician 
-				| the summer before college and discovered that the high-stress environment of the hospital was not for me; but, I still 
-				span.bold loved working with critters. 
-				| So, when I attended Cal Poly San Luis Obispo, I 
-				span.bold studied Animal Science 
-				| to get the most hands-on experiences with animals like horses, cattle, pigs, sheep, and chickens. My initial exposure to animal behavior began through an internship with Dolphin Quest, where I 
-				span.bold trained Atlantic Bottlenose Dolphins 
-				| in Bermuda for a summer. A year later I took a class where I  
-				span.bold learned to train calves to walk on a halter 
-				| for FFA shows--more animal behavior.
-		div.panel
-			p 
-				| A year after I graduated from Cal Poly with a 
-				span.bold Bachelor’s of Science in Animal Science, 
-				| I went to graduate school at Humboldt State University and earned a 
-				span.bold Master’s of Art in Social Science 
-				| in a program called 
-				span.bold Environment and Community. 
-				| While I was fascinated by the interactions between the human species, what I learned most from my time in graduate school was that I enjoyed 
-				span.bold coaching students 
-				| during my part-time job as an 
-				span.bold Academic Advisor 
-				| for the University. Once I graduated, I knew I wanted to coach people and have animals be a part of my future career. Then, I found the 
-				span.bold Dog Training Internship Academy (DTIA) 
-				| based in San Francisco. I discovered that 
-				span.bold dog training was the marriage of two things I loved: coaching people and working with dogs. 
-				| Through a rigorous 6 month program I studied scientifically-based animal behavior and learning, mechanics and methods for teaching behaviors to dogs, effective coaching skills, and logged hundreds of hours 
-				span.bold training dogs for in-class tests 
-				| that were stricter than the Canine Good Citizenship (CGC) certification process.
-section#programs
-	div
-		h1 Training Philosophy
-		p.small Training your pups comes in different approaches and tatics. Make sure you choose one that is comfortable for you and your pal.
-		button Learn More
+
+
+section.pageEnd
+	figure.banner#aboutMeEnd
+		div
+			h1 Training Philosophy
+			p.small Training your pups comes in different approaches and tatics. Make sure you choose one that is comfortable for you and your pal.
+			a(href="/philosophy"): button Learn More
 script(src='/js/mainscript.js')
