updated video titles

--- a/views/partials/videos.jade
+++ b/views/partials/videos.jade
@@ -4,18 +4,18 @@ section#playerLayer.invisible.ease(ng-click="closeVideo()")
 section#video.container
 	div.panelContainer
 		div.viewButton(ng-click="playVideo('R4v_Iu5o_ew')"): span.glyphicon.glyphicon-play
-		h2 Golden Retriver Aces Training Test!
+		h2 Hubert the French Bulldog Aces his Test!
 		img(src="video1.jpg")
 	div
 		div.grid-half
 			div.panelContainer
 				div.viewButton(ng-click="playVideo('WaZPgBrbfn8')"): span.glyphicon.glyphicon-play
-				p.hideBottom French Bulldog Aces Training Test!
+				p.hideBottom Biggie the Golden Retriever Aces his Test!
 				img(src="video2.jpg")
 		div.grid-half
 			div.panelContainer
 				div.viewButton(ng-click="playVideo('5_sjCwPU3tI')"): span.glyphicon.glyphicon-play
-				p.hideBottom Poodle Waits for Command to Go Out
+				p.hideBottom Labradoodle Waits for Command to Go Out
 				img(src="video3.jpg")
 section.pageEnd
 	figure.banner#videoEnd
