--- a/views/partials/contact.jade
+++ b/views/partials/contact.jade
@@ -2,7 +2,7 @@ section.container#contact
 	header
 		h1.title Contact Me
 		p.small Hi, I'm Alyssa Hosbach!
-		p.small You can reach me through my phone, Email, or simply leave me a message below.
+		p.small You can reach me by phone, Email, or leaving a message below.
 	div
 		div.grid-half
 			div.panel
